# rustDFS

./: Cargo.toml  README.md  build.rs  rustfmt.toml  todo.txt
.env/: Dockerfile  docker.sh  rdfsconf.toml
.github/: CODEOWNERS
.github/workflows/: checks.yml  rustfmt.yml
.github/workflows/build-action/: Dockerfile
cli/: Cargo.toml
client/: Cargo.toml
client/src/: args.rs  client.rs  error.rs  host.rs  main.rs  out.rs  result.rs
data_node/: Cargo.toml
data_node/src/: blocks.rs  conn.rs  data_mgr.rs  main.rs  nodes.rs  service.rs
example/: Dockerfile.client  Dockerfile.datanode  Dockerfile.namenode  README.md  client.sh  docker-compose.yml  rdfsconf.toml
example/basic/: Dockerfile.client  Dockerfile.datanode  Dockerfile.namenode  README.md  client.sh  docker-compose.yml  rdfsconf.toml
example/blockreport/: Dockerfile.datanode  docker-compose.yml
example/files/: medium.txt  small.txt
example/leasing/: Dockerfile.client  Dockerfile.datanode  Dockerfile.namenode  README.md  client.sh  docker-compose.yml  rdfsconf.toml
example/persistence/: Dockerfile.client  Dockerfile.namenode  README.md  client.sh  run.sh
name_node/: Cargo.toml  build.rs
name_node/src/: conn.rs  files.rs  main.rs  name_mgr.rs  nodes.rs  proto.rs  service.rs
proto/: Cargo.toml  build.rs  data_node.proto  name_node.proto  peer.proto
proto/proto/: data_node.proto  name_node.proto  name_node_persist.proto
proto/src/: lib.rs
shared/: Cargo.toml
shared/src/: base.rs  bytesize.rs  config.rs  conn.rs  data_conn.rs  data_node.rs  error.rs  host.rs  lib.rs  logging.rs  proto.rs  result.rs
shared/src/base/: args.rs  config.rs  error.rs  logging.rs  node.rs
shared/src/data_node/: conn.rs  mgr.rs  proto.rs
src/: config.rs  data_node.rs  peer.rs
src/rustdfs/: data_node.rs
src/rustdfs/data_node/: data_dir.rs  service.rs
src/rustdfs/shared/: config.rs  error.rs  node.rs
