[package]
name = "rustdfs-datanode"
version = "0.0.0"
edition = "2024"

[dependencies]
rustdfs-shared = { path = "../shared", version = "0.0.0" }
futures = "0.3.31"
tonic = "0.14"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.14"

[[bin]]
name = "rustDFS-datanode"
path = "src/main.rs"
