[package]
name = "rustdfs-proto"
version = "0.0.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost =  "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[lib]
path = "src/lib.rs"
