[package]
name = "rustdfs-shared"
version = "0.0.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
rustdfs-proto = { path = "../proto", version = "0.0.0" }
chrono = "0.4.43"
clap = { version = "4.5.59", features = ["derive"] }
futures = "0.3.31"
prost = "0.14"
toml = "0.9.8"
tonic = "0.14"
serde = { version = "1.0", features = ["derive"] }

[lib]
path = "src/lib.rs"
